@@ -1,11 +1,12 @@
 Package: lamW
 Type: Package
 Title: Lambert-W Function
-Version: 1.2.0
-Date: 2016-10-26
+Version: 1.3.0
+Date: 2017-04-24
 Authors@R: c(person(given="Avraham", family="Adler", role=c("aut", "cph", "cre"), email="Avraham.Adler@gmail.com"))
 Description: Implements both real-valued branches of the Lambert-W function, also known as the product logarithm, without the need for installing the entire GSL.
 License: BSD_2_clause + file LICENSE
+Depends: R (>= 3.0.2)
 Imports: Rcpp, RcppParallel (>= 4.3.20)
 LinkingTo: Rcpp, RcppParallel (>= 4.3.20)
 SystemRequirements: GNU make
@@ -13,8 +14,8 @@ Suggests: testthat
 NeedsCompilation: yes
 URL: https://bitbucket.org/aadler/lamw
 BugReports: https://bitbucket.org/aadler/lamw/issues
-Packaged: 2016-10-26 17:38:28 UTC; aadler00
+Packaged: 2017-04-24 19:01:16 UTC; aadler00
 Author: Avraham Adler [aut, cph, cre]
 Maintainer: Avraham Adler <Avraham.Adler@gmail.com>
 Repository: CRAN
-Date/Publication: 2016-10-27 09:17:48
+Date/Publication: 2017-04-24 22:17:14 UTC
