@@ -1,19 +1,20 @@
-7583fab81a6eb23609b98493ee24ad89 *DESCRIPTION
+59a7d47015e7394f144ca1cc4d5ff29a *DESCRIPTION
 9fe401759a8da27089ef3979da17fa74 *LICENSE
-6dc4b0fde220994fff2f8b2f570a6681 *NAMESPACE
+610b72e22e057e24ad168d21d1b2e89b *NAMESPACE
 9f8c7519a3cc197113f047fa0b15009e *R/RcppExports.R
 8647d73e48262fb1b4996f1137fda004 *R/lamW.R
-c2f1948bd4459895e56c19ccff4ef558 *README.md
-fe7bc2da3edf94ffd9ddf1b5ea02fc17 *build/partial.rdb
-88db6bee181348956037f3fb9532ba08 *inst/News.Rd
+f368e8f7c4afa95b55a974d7bf15f58f *README.md
+70c1d2d4cc47f84e8dec43708ba92c0e *build/partial.rdb
+768f3975ff88750b34246cfa7d94d0fa *inst/News.Rd
 d66ed4ab893bafeb5bbbc901bc54b245 *inst/include/lamW.h
 9fcc3a67d709c5f4a03dc70ffdfa253e *inst/include/lamW_RcppExports.h
-726f1a8ba0ebe84c45c2a5b108d40ffc *man/lamW-internal.Rd
-e10fffcec1d29c0402234ce5f93080a3 *man/lamW-package.Rd
+e55646e127043b0cdf4df59fcf58c7a3 *man/lamW-internal.Rd
+e9eefb0052674f2d46c1a3ac00be71e7 *man/lamW-package.Rd
 d53e85a064f8c38520bad302bcfa7bd6 *man/lamW.Rd
 8465ee3c046dc4b929d81033152f5339 *src/Makevars
 1344f2b0991ab305a1a99893493c907d *src/Makevars.win
 b7e14753361562f31f389e05f799e807 *src/RcppExports.cpp
+6680dc860442a5c2c9d1bffb06c9c2bf *src/init.c
 a911c3dfde90f1a8b51c4af610609005 *src/lambertW.cpp
 98957ce4a115c8bff831cace88fa1557 *tests/testthat.R
 b66beb8f298e1ab27a1170da7e0bcd06 *tests/testthat/test-lamW.R
