@@ -1,4 +1,4 @@
-useDynLib(lamW)
+useDynLib(lamW, .registration = TRUE)
 exportPattern("^[[:alpha:]]+")
 importFrom("Rcpp", "evalCpp")
 importFrom(RcppParallel, RcppParallelLibs)
