@@ -1,5 +1,6 @@
 **lamW** is an `R` package which calculates the real-valued branches of the [Lambert-W function](https://en.wikipedia.org/wiki/Lambert_W_function).
 
-####Note
+####Notes
  - This project attempts to follow [Semantic Versioning](http://semver.org/)
  - This project attempts to follow the changelog system at [Keep a CHANGELOG](http://keepachangelog.com/)
+ - At times, the NEWS fails to render on CRAN. The latest source can always be found in [the repository](https://bitbucket.org/aadler/lamw).
