@@ -3,6 +3,9 @@
 %% These are the internal C++ functions called by the package
 \alias{lambertW0_C}
 \alias{lambertWm1_C}
+\alias{lamW_RcppExport_registerCCallable}
+\alias{lamW_lambertW0_C}
+\alias{lamW_lambertWm1_C}
 
 \title{Internal lamW Functions}
 \description{
