@@ -2,8 +2,15 @@
 \alias{NEWS}
 \title{NEWS file for the lamW package}
 
-\section{Version 1.2.0 (2016-10-26)}{
+\section{Version 1.3.0 (2017-04-24)}{
+  \subsection{Added}{
+    \itemize{
+      \item Added new package native routine registration.
+    }
+  }
+}
 
+\section{Version 1.2.0 (2016-10-26)}{
   \subsection{Changed}{
     \itemize{
       \item Now using RcppParallel for calculation. Speedup when calculating more than one value at a time should be noticeable, e.g. around a 5x speedup on an 8 core machine. There should be no noticeable change when calculating single values at a time.
